main.css
*{
    display: flex;
    flex-direction: column;
    text-align: center;
   
}
head {
    display:none;
}
.fas,.fa-wine-glass-alt,.fa-award,.fa-question,.fa-glass-cheers,.fa-thumbs-up{

   color:maroon;
   font-size: 80px;
    
}
main{
 
    height: 500px;
    width: 90%;

}


heading{

    width: 60%;
    align-self: center;
}
input[type=radio] {
    display: inline;
}

main,heading{
    background: rgba(255, 255, 255, 0.877);
    background-size: auto auto;
    overflow: scroll;
}
button,main,heading{
    border: rgba(128, 128, 128, 0.658) 3px solid;
    border-radius: 8px;
    margin-bottom: 4%;
}
button {
    margin-top: 15px;
    background:navy;
    color: white;
    font-size: 28px;
    margin-left: auto;
    margin-right: auto;
    align-self: center;
}

li{
    font-size: 36px;
    color:navy;
}
.second-line{
    display: block;
}

h2,h1,ul{
   margin-top: 1%;
   font-family: 'Playfair Display', serif;
}
h2,h3,ul{
    padding: 1%; 
}

h2,.questionAnswerForm{
    font-size: 28px;
}
h3,main,.startButton,.fas,.fa-wine-glass-alt,ul{
    margin-left: auto;
    margin-right: auto;
}
input{
    display: hidden;
}

h1{
    font-size: 80px;
    color: navy;
    display: inline-block;
}

body{
    background-image: url("berries-blur-blurry-39351.jpg");
    
    background-size: cover;
}
#js-wine-form,.questionAnswerForm{
    padding: 3%;
  
}
.questionAnswerForm{
    display: none;
    align-self: center;
}


.animatedShake{
        /* Start the shake animation and make the animation last for 0.5 seconds */
        animation: shake 0.3s; 
      
        /* When the animation is finished, start again */
        animation-iteration-count: 1; 
}
      
@keyframes shake {
        0% { transform: translate(1px, 1px) rotate(0deg); }
        10% { transform: translate(-1px, -2px) rotate(-1deg); }
        20% { transform: translate(-3px, 0px) rotate(1deg); }
        30% { transform: translate(3px, 2px) rotate(0deg); }
        40% { transform: translate(1px, -1px) rotate(1deg); }
        50% { transform: translate(-1px, 2px) rotate(-1deg); }
        60% { transform: translate(-3px, 1px) rotate(0deg); }
        70% { transform: translate(3px, 1px) rotate(-1deg); }
        80% { transform: translate(-1px, -1px) rotate(1deg); }
        90% { transform: translate(1px, 2px) rotate(0deg); }
        100% { transform: translate(1px, -2px) rotate(-1deg); }
}


@media screen and (min-width: 499px) {
h1{
    font-size: 60px;
}

}
@media screen and (max-width: 498px) {
    h1{
        font-size: 40px;
    }
    h2{
        font-size: 26px; 
    }
    input[type=radio]{
        padding: 5px; 
    }

}

@media screen and (max-width: 320px) {
        h1{
            font-size: 18px;
        };
        li{
        font-size: 20px;
        }
        
        .second-line,.first-line{
            font-size: 26px;
        }
        
}

